changed color of site

--- a/aon.html
+++ b/aon.html
@@ -6,7 +6,7 @@
 <title>AON (PDM) Network Practice — CPM w/ FS/SS/FF/SF + PS/PF</title>
 <style>
   :root{
-    --bg:#0f172a;          /* slate-900 */
+    --bg:#0f2a1b;          /* slate-900 */
     --panel:#111827;       /* gray-900 */
     --ink:#e5e7eb;         /* gray-200 */
     --muted:#9ca3af;       /* gray-400 */
@@ -53,7 +53,7 @@
     padding:6px 10px;border-radius:8px;cursor:pointer
   }
   button:hover{background:var(--btn-hover)}
-  button.primary{background:linear-gradient(180deg,#1e293b,#0f172a);border-color:#2c3b52}
+  button.primary{background:linear-gradient(180deg,#1e293b,#0f2a1b);border-color:#2c3b52}
   .kudos{color:var(--muted);font-size:12px}
   .toolbar{
     display:flex;gap:8px;align-items:center;padding:10px;border-bottom:1px solid var(--border);
@@ -86,8 +86,8 @@
   .ghost-tip{position:absolute;left:12px;top:12px;background:rgba(15,23,42,.8);padding:6px 8px;border-radius:8px;border:1px solid var(--border);font-size:12px;pointer-events:none}
 
   /* SVG styles */
-  svg .aon-node rect{fill:#0f172a;stroke:#475569;stroke-width:2;rx:10;ry:10}
-  svg .aon-node polygon{fill:#0f172a;stroke:#475569;stroke-width:2}
+  svg .aon-node rect{fill:#0f2a1b;stroke:#475569;stroke-width:2;rx:10;ry:10}
+  svg .aon-node polygon{fill:#0f2a1b;stroke:#475569;stroke-width:2}
   svg .aon-node.selected rect, svg .aon-node.selected polygon{stroke:#60a5fa}
   svg .aon-node text{fill:#e5e7eb;font-weight:600;font-size:12px;user-select:none}
   svg .aon-node .muted{fill:#9ca3af;font-weight:500}
